@@ -1,5 +1,7 @@
 ---
 
+* [Bug 3610] process_control() should bail earlier on short packets. stenn@
+  - Reported by Philippe Antoine
 * [Bug 3608] libparse fails to compile on S11.4SRU13 and later <perlinger@ntp.org>
   - removed ffs() and fls() prototypes as per Brian Utterback
 * [Bug 3604] Wrong param byte order passing into record_raw_stats() in
